Replace CategoryProduct entity with @ManyToMany